--- a/resource/html/lesson_3_list.html
+++ b/resource/html/lesson_3_list.html
@@ -7,8 +7,25 @@
 </head>
 
 <body>
-    
-
+    <!-- 无序列表 -->
+    <ul>
+        <li></li>
+        <li></li>
+        <li></li>
+    </ul>
+    <!-- 有序列表 -->
+    <ol>
+        <li></li>
+        <li></li>
+        <li></li>
+    </ol>
+    <!-- 定义列表 -->
+    <dl>
+        <dt></dt>
+        <dd></dd>
+        <dd></dd>
+        <dd></dd>
+    </dl>
 
 </body>
 
