--- a/resource/html/layout_6.html
+++ b/resource/html/layout_6.html
@@ -13,13 +13,13 @@
             padding: 0;
         } */
         body{
-            /* margin: 0; */
+            margin: 0;
         }
         p{
-            /* margin: 0; */
+            margin: 0;
         }
         ul{
-            /* margin: 0; */
+            margin: 0;
             /* padding: 0; */
             /* 去除项目符号 */
             /* list-style: none; */
